# Kathara

./: .gitattributes  .gitignore  .gitmodules  .project  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kathara_dry_run.txt  Makefile  README-NIX.md  README.md  SECURITY.md  compile.py  config.example  flake.nix  istruzioni pack deb.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
Image dind-kathara/: Dockerplugin.txt  README.md
Image dind-kathara/base10/: .bashrc  Dockerfile
Image dind-kathara/dind-kathara-10/: Dockerfile  build  kathara.list  requirements.txt  wrapdocker
Image dind-kathara/quagga10/: Dockerfile  quagga  zebra.conf
Images/base/: Dockerfile
Images/frr/: Dockerfile
Images/quagga/: Dockerfile
Images/sdn/: Dockerfile
Kathara/: Kathara.py  config.json  kathara.py  kathara.spec  utils.py  version.py
Kathara/bgp-small-internet/: as100r1.startup  as100r2.startup  as100r3.startup  as1r1.startup  as200r1.startup  as20r1.startup  as20r2.startup  as20r3.startup  as300r1.startup  as300r2.startup  as300r3.startup  as300r4.startup  as30r1.startup  as40r1.startup  lab.conf
Kathara/classes/api/: DockerHubApi.py  GitHubApi.py
Kathara/classes/command/: CheckCommand.py  ConnectCommand.py  LcleanCommand.py  LinfoCommand.py  ListCommand.py  LrestartCommand.py  LstartCommand.py  SettingsCommand.py  VcleanCommand.py  VconfigCommand.py  VersionCommand.py  VstartCommand.py  WipeCommand.py
Kathara/classes/commands/: LcleanCommand.py  LstartCommand.py  SettingsCommand.py  VcleanCommand.py  VconfigCommand.py  VersionCommand.py  VstartCommand.py
Kathara/debian/: changelog  control  kathara.dirs
Kathara/model/: Device.py  Lab.py  Lan.py
P4-examples/: README.md
P4-examples/lab-double-switch/: lab.conf  server.startup  sniffer.startup  switch2.startup
P4-examples/lab-single-switch/: lab.conf
P4-examples/lab-triple-switch/: client1.startup  lab.conf  switch1.startup  switch3.startup
Resources/: utils.py  version.py
Resources/api/: DockerHubApi.py  GitHubApi.py
Resources/command/: CheckCommand.py  LrestartCommand.py  SettingsCommand.py  VconfigCommand.py  VstartCommand.py  WipeCommand.py
Resources/manager/: ManagerProxy.py
Resources/model/: Lab.py  Machine.py
Resources/setting/: Setting.py
Resources/validator/: ImageValidator.py
SDN-examples/hello-world/: lab.conf
SDN-examples/l3-controller/: lab.conf  pc1.startup  pc2.startup  r1.startup  r2.startup  r3.startup  sw.startup
SDN-examples/simple-controller/: lab.conf  pc2.startup
SDN-examples/topology/: lab.conf  pc1.startup  pc2.startup  pc3.startup  sw1.startup  sw2.startup  sw3.startup
SDN-examples/two-hosts/: controller.startup  lab.conf  pc1.startup  pc2.startup  switch1.startup
Script network/: move_veth.py  up_network.py
bgp-small-internet/: as100r1.startup  as100r2.startup  as100r3.startup  as1r1.startup  as200r1.startup  as20r1.startup  as20r2.startup  as20r3.startup  as300r1.startup  as300r2.startup  as300r3.startup  as300r4.startup  as30r1.startup  as40r1.startup  lab.conf
bgp-small-internet/_test/: as100r1.test  as100r2.test  as100r3.test  as1r1.test  as200r1.test  as20r1.test  as20r2.test  as20r3.test  as300r1.test  as300r2.test  as300r3.test  as300r4.test  as30r1.test  as40r1.test
doc/: HyperV space reduction.docx  HyperV.docx
docs/: Makefile  footer.md  footer.txt  index.txt  kathara-check.1.ronn  kathara-connect.1.ronn  kathara-exec.1.ronn  kathara-lab-dirs.7.ronn  kathara-lab.conf.5.ronn  kathara-lab.dep.5.ronn  kathara-lab.ext.5.ronn  kathara-lclean.1.ronn  kathara-lconfig.1.ronn  kathara-linfo.1.ronn  kathara-list.1.ronn  kathara-lrestart.1.ronn  kathara-lstart.1.ronn  kathara-ltest.1.ronn  kathara-settings.1.ronn  kathara-vclean.1.ronn  kathara-vconfig.1.ronn  kathara-vstart.1.ronn  kathara-wipe.1.ronn  kathara.1.ronn  kathara.conf.5.ronn
kathara/: requirements.txt
kathara-0.47/: kathara.py  kathara.spec  utils.py
kathara-0.47/debian/: control  kathara.postinst  rules
kathara/debian/: rules
nix/: default.nix  home-manager.nix
scripts/Linux/: Makefile  README.md  generate_autocompletion.py
scripts/Linux-Arch/: Makefile  README.md
scripts/Linux-Deb/: Makefile  README.md
scripts/Linux-Debian/: README.md
scripts/Linux-Fedora/: Makefile
scripts/Linux-Pkg/: Makefile  README.md  kathara.spec
scripts/Linux-Rpm/: Makefile  README.md  kathara.pyinstaller.spec
scripts/OSX/: Makefile  README.md  kathara.spec
scripts/Windows/: README.md  WindowsBuild.bat  installer.iss  kathara.spec
scripts/autocompletion/: generate_autocompletion.py  requirements.txt
scripts/pip-package/: Makefile  README.md
scripts/pydoc/: Makefile  README.md  generate_doc.py
src/: kathara.py  requirements.txt
src/Kathara/: __init__.py  decorators.py  exceptions.py  strings.py  types.py  utils.py  version.py
src/Resources/: decorators.py  exceptions.py  strings.py  utils.py  version.py  wire.py
src/debian/: control  kathara.lintian-overrides  rules
test/: Untitled.ipynb  docker-compose.yml  tests.ipynb  tests_python3.ipynb
tests/: types_test.py  utils_test.py
tests/cli/: connect_command_test.py  exec_command_test.py  lclean_command_test.py  lconfig_command_test.py  linfo_command_test.py  list_command_test.py  lrestart_command_test.py  lstart_command_test.py  vclean_command_test.py  vconfig_command_test.py  vstart_command_test.py  wipe_command_test.py
tests/model/: external_link_test.py  filesystem_mixin_test.py  interface_test.py  lab_filesystem_mixin_test.py  lab_test.py  machine_test.py
tests/parser/: dep_parser_test.py  ext_parser_test.py  folder_parser_test.py  lab_parser_test.py  option_parser_test.py
tests/webhooks/: docker_hub_api_test.py  github_api_test.py
tutorial/: README.md
tutorial/lab-double-switch/: client.startup  switch1.startup
tutorial/lab-single-switch/: client.startup  server.startup  switch.startup
tutorial/lab-triple-switch/: client2.startup  client3.startup  switch2.startup
(+493 files in other folders)
