[project]
name = "kathara"
version = "3.6.2"
description = "A lightweight container-based emulation system."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["NETWORK-EMULATION", "CONTAINERS", "NFV"]
authors = [
    { name = "Kathara Framework", email = "contact@kathara.org" } # Optional
]

maintainers = [
    { name = "Tommaso Caiazzi", email = "contact@kathara.org" }, # Optional
    { name = "Mariano Scazzariello", email = "contact@kathara.org" }, # Optional
    { name = "Lorenzo Ariemma", email = "contact@kathara.org" }, # Optional
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "binaryornot>=0.4.4",
    "docker>=6.0.1",
    "kubernetes>=23.3.0",
    "requests>=2.22.0",
    "coloredlogs>=10.0",
    "terminaltables>=3.1.0",
    "slug>=2.0",
    "deepdiff==6.2.2",
    "pyroute2>=0.5.19",
    "progressbar2>=1.14.0",
    "fs>=2.4.16",
    "libtmux>=0.8.2; platform_system == 'darwin' or platform_system == 'linux'",
    "appscript>=1.1.0; platform_system == 'darwin'",
    "pypiwin32>=223; platform_system == 'win32'",
    "windows-curses>=2.1.0; platform_system == 'win32'"
]

[project.optional-dependencies]
pyuv = ["pyuv @ https://api.github.com/repos/saghul/pyuv/tarball/master"]
test = ["pytest"]

[project.urls]
"Homepage" = "https://www.kathara.org"
"Bug Reports" = "https://github.com/KatharaFramework/Kathara/issues"
"Source" = "https://github.com/KatharaFramework/Kathara"

[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"