[metadata]
name = kathara
version = 3.2.0
author = Kathara Framework
author_email = contact@kathara.org
description = A lightweight container based emulation system
long_description = file: README.md
long_description_content_type = text/markdown
url = www.kathara.org
project_urls =
    Bug Tracker = https://github.com/KatharaFramework/Kathara/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: gpl-3.0 License
    Operating System :: OS Independent