[metadata]
name = kathara
version = 3.3.0
author = Kathara Framework
author_email = contact@kathara.org
description = A lightweight container based emulation system
long_description = file: README.md
long_description_content_type = text/markdown
url = www.kathara.org
project_urls =
    Bug Tracker = https://github.com/KatharaFramework/Kathara/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9