[metadata]
name = kathara
version = 3.7.4
author = Kathara Framework
author_email = contact@kathara.org
description = A lightweight container-based network emulation tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = www.kathara.org
project_urls =
    Bug Tracker = https://github.com/KatharaFramework/Kathara/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11